# grappler_platformer

./: .gitignore  Cargo.toml
assets/sprites/: player_sheet.csv
src/: level.rs  main.rs  player.rs  sprites.rs
src/player/: camera.rs  input.rs  movement.rs  state_machine.rs  visuals.rs
src/player/movement/: grappler.rs  gravity.rs  horizontal_movement.rs  jumper.rs  lander.rs  slingshot.rs  terminal_velocity.rs  velocity.rs  wall_movement.rs
