[package]
name = "platformer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.11.3", features = ["dynamic_linking"] }
bevy_rapier2d = { version = "0.22.0", features = ["debug-render-2d"] }
seldom_state = "*"
leafwing-input-manager = "*"
bevy_editor_pls = "*"
bevy_ecs_tilemap = "*"
csv = "*"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
